<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_general_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/bookSearch_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book"
                    android:textSize="@dimen/middle_text_size" />

                <TextView
                    android:id="@+id/readerSearch_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:text="@string/reader"
                    android:textSize="@dimen/middle_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_margin"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/serchContent_et"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/search_book_hint"
                    android:padding="@dimen/edit_text_padding" />

                <TextView
                    android:id="@+id/clear_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_delete" />
            </LinearLayout>

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/serch_selector" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/authBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AUTH" />

</LinearLayout>