<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_general_bg"
    android:orientation="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/bar_all" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/readerIntroduce_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reader_intro"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/readerIntro_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="reader intro" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reading_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reading"
                    android:textColor="@color/blue" />

                <LinearLayout
                    android:id="@+id/readingList_lyt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reader_intro"
                        android:textColor="@color/blue" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wish_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wish"
                    android:textColor="@color/blue" />

                <LinearLayout
                    android:id="@+id/wishList_lyt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reader_intro"
                        android:textColor="@color/blue"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/done_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:textColor="@color/blue" />

                <LinearLayout
                    android:id="@+id/doneList_lyt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reader_intro"
                        android:textColor="@color/blue"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>