<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bookDetail_lyt"
    android:background="@drawable/ic_general_bg"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_margin" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left" >

                <ImageView
                    android:id="@+id/bookImg_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/bookName_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="bookName" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/bookAuthor_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="author"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/bookPrice_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="price"
                        android:textColor="@color/red" />

                    <TextView
                        android:id="@+id/bookPublisher_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="publisher" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/bookGrade_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="评分" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/collet_lyt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left" >

                        <Button
                            android:id="@+id/wish_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wish" />

                        <Button
                            android:id="@+id/reading_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reading" />

                        <Button
                            android:id="@+id/done_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/done" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/bookSumary_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bookSumary" />

            <TextView
                android:id="@+id/authorSumary_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="authorsummay" />

            <Button
                android:id="@+id/comment_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="showComment" />

            <Button
                android:id="@+id/collect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="showComment" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>